Fixed most dimension issues, notes are now easily visible
Changed dimension of iframe to make all the data in the page visible. Also allowed for scrolling, that can be a temporary fix. Must be noted that the calendar itself functions correctly but since there is still one other issue with the calendar page itself it looks like it is not.

--- a/Prototyping/mainStyle.css
+++ b/Prototyping/mainStyle.css
@@ -92,16 +92,16 @@
 .containerCalendar{
     position: fixed;
     top: 3rem;
-    
-    width: 83.2%;
-    height: 100%;
+    overflow: hidden;
+    width: 70%;
+    height: 80%;
     border-left-style: groove;
     border-color: #2e2727;
 }
 
 .calendarMain{
-    width: 76.45rem;
-    height: 51.8rem;
+   /* width: 76.45rem;
+    height: 51.8rem;*/
     border-style: solid;
 }
 
@@ -153,7 +153,7 @@
     border-top-style: groove;
     border-color: #241e1e;
     /*border-style: solid;*/
-    height: 6%;
+    height: 12%;
 }
 
 .menu{
